--- a/index.html
+++ b/index.html
@@ -106,10 +106,10 @@
                 Shopper.
             </div>
             <div class="nav-items">
-                <span>Home</span>
-                <span><a href="./women.html" target="women" >WOMENS</a></span>
-                <span><a href="./mens.html" target="women" >MENS</a></span>
-                <span><a href="./kids.html" target="women" >KIDS</a></span>
+                <span>home</span>
+                <span><a href="./women.html" target="women" >woman</a></span>
+                <span><a href="./mens.html" target="women" >man</a></span>
+                <span><a href="./kids.html" target="women" >kids</a></span>
             </div> 
             
             
